# bvcore_cpp

./: CMakeLists.txt  README.md
.github/workflows/: appimage.yml  cmake.yml  macos.yml  windows.yml
src/: CMakeLists.txt
